...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Mililiters"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
        app:layout_constraintVertical_bias="0.055" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="82dp"
        android:layout_height="38dp"
        android:text="add"
        app:layout_constraintBottom_toBottomOf="@+id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
...
