...
        android:theme="@style/Theme.X06_Hydrate_Me"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_add_24" />

    <TextView
        android:id="@+id/totalIntake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="default"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
